# TZShot

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  THIRD_PARTY_NOTICES.md  build.bat  qml.qrc
.github/workflows/: windows-build.yml
docs/: FEATURE_EVALUATION_REPORT.md  INTERACTION_LOGIC_REPORT.md  PROJECT_ANALYSIS_REPORT.md
i18n/: app_en.ts  app_zh_CN.ts
packaging/: tzshot.iss
resource/qss/: capture_overlay_widget.qss
src/: app_version.h  instance_activation.cpp
src/ai_call/: ai_call_base.cpp  ai_call_base.h  doubao_vision_call.cpp  qwen_ai_call.cpp  seedream_ai_call.cpp
src/app/: tzshot_app.cpp  tzshot_services.cpp  tzshot_services.h  tzshot_widget_runtime.cpp  tzshot_widget_runtime.h
src/model/: app_settings.cpp  app_settings.h
src/ocr/: ocr_engine.cpp
src/paint_board/shape/: arrow_shape.cpp  arrow_shape.h  blur_shape.cpp  blur_shape.h  ellipse_shape.cpp  ellipse_shape.h  mosaic_shape.cpp  mosaic_shape.h  number_shape.cpp  number_shape.h  pen_shape.cpp  pen_shape.h  rect_shape.cpp  rect_shape.h  shape.cpp  shape.h  text_shape.cpp  text_shape.h  two_point_shape.cpp  two_point_shape.h
src/viewmodel/: ai_view_model.cpp  ai_view_model.h  scroll_capture_view_model.cpp  sticky_view_model.cpp  sticky_view_model.h  storage_view_model.cpp  storage_view_model.h
src/widgets/: about_dialog.cpp  capture_overlay_widget.cpp  capture_overlay_widget.h  selection_mask_controller.cpp  settings_dialog.cpp  settings_dialog.h  sticky_canvas_widget.cpp  sticky_canvas_widget.h  sticky_pin_widget.cpp  sticky_pin_widget.h
